--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "displayName": "Blink Dagger",
   "publisher": "ariussssss",
   "description": "Search and open source code from Github and local.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
-    "vscode": "^1.54.0"
+    "vscode": "^1.57.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
+    "onCommand:blinkDagger.fetch",
     "onCommand:blinkDagger.open"
   ],
+  "repository": "https://github.com/Ariussssss/vscode-extension-blink-dagger",
   "main": "./dist/extension.js",
+  "icon": "images/logo.png",
   "contributes": {
     "configuration": [
       {
         "title": "Blink Config",
         "properties": {
+          "conf.blinkDagger.privateToken": {
+            "type": "string",
+            "default": "",
+            "description": "Token for private repos.",
+            "scope": "allOpenProjects"
+          },
           "conf.blinkDagger.rootDir": {
             "type": "string",
-            "default": "~/Packages",
+            "default": "~/Code",
             "description": "Source directory.",
             "scope": "allOpenProjects"
           },
@@ -42,8 +51,12 @@
     ],
     "commands": [
       {
+        "command": "blinkDagger.fetch",
+        "title": "Blink Dagger: Fetch"
+      },
+      {
         "command": "blinkDagger.open",
-        "title": "blink open"
+        "title": "Blink Dagger: Open"
       }
     ]
   },
@@ -60,10 +73,11 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/mkdirp": "^1.0.2",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
-    "@types/vscode": "^1.59.0",
+    "@types/vscode": "^1.57.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
@@ -76,6 +90,8 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "lodash.debounce": "^4.0.8",
     "mkdirp": "^1.0.4"
   }
 }
